Fix align notifications

--- a/client/stylesheets/42favs.less
+++ b/client/stylesheets/42favs.less
@@ -1126,3 +1126,14 @@ div.view {
     list-style-type: none;
     padding-right: 20px;
 }
+
+@keyframes fadeOut {
+  0% {opacity: 0;}
+  10% {opacity: 1;}
+  90% {opacity: 1;}
+  100% {opacity: 0;}
+}
+
+.alert {
+  animation: fadeOut 2700ms ease-in 0s 1 forwards;
+}
